Minor bug fixes Added check to save assessment that checks whether obtained score exceeds total score Delinking a timetable that is displayed will now remove that timetable from the list of displayed timetables Delink buttons have been shifted 10px to the left so it is possible to select them.

--- a/app/static/compare.css
+++ b/app/static/compare.css
@@ -6,7 +6,7 @@
   
   .delink-button {
     position: absolute;
-    right: -30px;
+    right: -20px;
     top: 50%;
     transform: translateY(-50%);
     opacity: 0;
